# moltex

./: .gitignore  AGENTS.md  LICENSE  README.md  complete_pipeline.md  css_improvements.md  filter_out_inactive_plugins.md  gutenberg_blocks_migration_improvement.md  moltex.md  moltex_harness.md  moltex_improvements.md  phpunit.xml.dist
moltex_harness/: README.md  pyproject.toml
moltex_harness/src/moltex_harness/: __init__.py  cli.py  network.py
moltex_harness/src/moltex_harness/contracts/: __init__.py  service.py  store.py  verify.py
moltex_harness/src/moltex_harness/conversion/: __init__.py  blocks.py  converter.py  failures.py  frontmatter.py  gutenberg.py  icons.py  shortcodes.py  urls.py
moltex_harness/src/moltex_harness/harness/: __init__.py  artifacts.py  files.py  fixtures.py  gates.py  lifecycle.py  models.py  processes.py  profiles.py  readiness.py  repair.py  reporting.py  runner.py  toolchain.py  workspace.py
moltex_harness/src/moltex_harness/intake/: __init__.py  archive.py  artifacts.py  errors.py  security.py  serialization.py  service.py  site_identity.py  snapshot_shell.py
moltex_harness/src/moltex_harness/models/: __init__.py  baseline.py  contracts.py  intake.py  pipeline.py  planning.py
moltex_harness/src/moltex_harness/normalize/: __init__.py  _compiler_assets.py  _compiler_capabilities.py  _compiler_content.py  _compiler_legacy.py  _compiler_outputs.py  _compiler_routes.py  _compiler_seo.py  _compiler_support.py  compiler.py  primitives.py
moltex_harness/src/moltex_harness/pipeline/: __init__.py  context.py  service.py
moltex_harness/src/moltex_harness/planning/: __init__.py  compiler.py  execution.py  service.py  store.py  verify.py
moltex_harness/src/moltex_harness/scaffold/: __init__.py  css.py  media.py  service.py  toolchain.py
moltex_harness/src/moltex_harness/visuals/: __init__.py  service.py
moltex_harness/tests/: conftest.py
moltex_harness/tests/fixtures/: expected_failures.json  golden_h2_expectations.json  golden_h3_visuals.json  golden_h3_workspace.json
moltex_harness/tests/fixtures/conversion/: gutenberg-kadence-contact.html
moltex_harness/tests/harness/: conftest.py  test_fixture_profile.py  test_mutations.py  test_processes.py  test_repair.py  test_reporting_artifacts.py  test_workspace.py
moltex_harness/tests/integration/scaffold/: test_baseline.py
moltex_harness/tests/integration/workspace/: test_planning.py
moltex_harness/tests/unit/: test_network.py
(+246 files in other folders)
