[project]
name = "moltex-harness"
version = "0.1.0"
description = "Safe intake and deterministic migration harness for Moltex WordPress exports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23,<5",
    "pydantic>=2.10,<3",
    "typer>=0.15,<1",
]

[project.scripts]
moltex = "moltex_harness.cli:app"

[dependency-groups]
dev = [
    "hypothesis>=6.124,<7",
    "pytest>=8.3,<9",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moltex_harness"]

[tool.hatch.build]
include = [
    "src/moltex_harness/**/*.py",
    "src/moltex_harness/intake/schemas/**/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
