[project]
name = "moltex-harness"
version = "0.1.0"
description = "Safe intake and deterministic migration harness for Moltex WordPress exports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23,<5",
    "markdownify>=1.2,<2",
    "nh3>=0.3,<1",
    "pillow>=11,<13",
    "playwright>=1.50,<2",
    "pydantic>=2.10,<3",
    "referencing>=0.35,<1",
    "typer>=0.15,<1",
]

[project.scripts]
moltex = "moltex_harness.cli:app"

[dependency-groups]
dev = [
    "hypothesis>=6.124,<7",
    "mypy>=2.3,<3",
    "pytest>=8.3,<9",
    "ruff>=0.15.22",
    "types-jsonschema>=4.26,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moltex_harness"]

[tool.hatch.build]
include = [
    "src/moltex_harness/**/*.py",
    "src/moltex_harness/intake/schemas/**/*.json",
    "src/moltex_harness/harness/fixture_data/**/*.json",
    "src/moltex_harness/scaffold/templates/*",
    "src/moltex_harness/scaffold/templates/**/*",
    "src/moltex_harness/scaffold/templates/.node-version",
    "src/moltex_harness/scaffold/templates/.npmrc",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
